--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,1 +1,50 @@
+/* Body */
+body {
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
 /* Header */
+header {
+    display: flex;
+    width: 100%;
+    margin: 0px;
+    background-color: black;
+}
+header h1 {
+    color: white;
+    font-size: 16px;
+    width: 100%;
+    margin-left: 20px;
+}
+
+/* Main */
+main {
+    display: flex;
+    flex-direction: column;
+}
+
+.content {
+    display: flex;
+    justify-content: center;
+    margin: 32px 72px;
+    flex-wrap: wrap;
+    gap: 32px;
+}
+
+.content > * {
+   
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    max-width: 532px;
+    height: 300px;
+}
+
+.card img {
+    height: auto;
+    width: 100%;
+}
